creusot/tests/should_fail/result_param.stderr
warning: unused variable: `result`
 --> result_param.rs:6:15
  |
6 | fn result_arg(result: u32) {}
  |               ^^^^^^ help: if this is intentional, prefix it with an underscore: `_result`
  |
  = note: `#[warn(unused_variables)]` on by default

warning: function `result_arg` is never used
 --> result_param.rs:6:4
  |
6 | fn result_arg(result: u32) {}
  |    ^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

error[creusot]: `result` is not allowed as a parameter name
 --> result_param.rs:6:15
  |
6 | fn result_arg(result: u32) {}
  |               ^^^^^^

error: aborting due to previous error; 2 warnings emitted

